style: 불필요한 개행 수정 및 매직 넘버 삭제